# RBE2002

./: .gitignore  .gitmodules  config.rviz
devel/share/differential_drive/cmake/: differential_driveConfig.cmake
devel/share/explore_lite/cmake/: explore_liteConfig.cmake
devel/share/multirobot_map_merge/cmake/: multirobot_map_mergeConfig.cmake
devel/share/rbe2002/cmake/: rbe2002Config.cmake
devel/share/robot_controller/cmake/: robot_controller-msg-extras.cmake  robot_controller-msg-paths.cmake  robot_controllerConfig.cmake
devel/share/roseus/ros/robot_controller/: manifest.l
devel/share/xv_11_laser_driver/cmake/: xv_11_laser_driverConfig.cmake
install/share/differential_drive/cmake/: differential_driveConfig.cmake
launch/: base_local_planner_params.yaml  coprocessor.launch  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_template.yaml  global_costmap_params.yaml  local_costmap_params.yaml  main.launch  move_base.launch
platformio/: platformio.ini
platformio/src/: MC33926MotorDriver.cpp  MC33926MotorDriver.h  XV11.cpp  XV11.h  main.cpp
src/differential-drive/scripts/: diff_tf.py
src/imu-minimu-arduino/: .travis.yml  LICENSE  README.md
src/imu-minimu-arduino/avr_imu/: CMakeLists.txt  package.xml
src/imu-minimu-arduino/avr_imu/firmware/: CMakeLists.txt  avr_imu.cpp
src/imu-minimu-arduino/avr_imu/firmware/arduino_libs/L3G/: L3G.cpp
src/imu-minimu-arduino/avr_imu/launch/: avr_imu.launch
src/imu-minimu-arduino/avr_imu/msg/: Imu.msg
src/imu-minimu-arduino/calib_imu/: CMakeLists.txt  package.xml  plugin_description.xml
src/imu-minimu-arduino/calib_imu/launch/: calib_imu.launch
src/imu-minimu-arduino/calib_imu/src/: CalibDisplay.cpp  CalibDisplay.h  CalibPanel.cpp  CalibPanel.h  CalibrationGenerator.cpp  CalibrationGenerator.h
src/imu-minimu-arduino/calib_imu/std_calib/: acc_bias.mat  acc_sensitivity.mat  ang_sensitivity.mat  mag_sensitivity.mat
src/imu-minimu-arduino/process_imu_data/: CMakeLists.txt  package.xml
src/imu-minimu-arduino/process_imu_data/launch/: process_imu_data.launch
src/imu-minimu-arduino/process_imu_data/src/: Sensor3DCalibration.cpp  Sensor3DCalibration.h  SensorFusion.cpp  SensorFusion.h  main.cpp
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/include/explore/: explore.h
src/robot_controller/src/: costmap_client.cpp  explore.cpp  robot_controller.cpp
