<?xml version="1.0"?>
<package>
  <name>process_imu_data</name>
  <version>0.0.1</version>
  <description>This node processes the senor fusion with an extended kalman filter</description>

  <maintainer email="cto@lxrobotics.com">Alexander Entinger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>avr_imu</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_filters</build_depend>
  
  <run_depend>avr_imu</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>message_filters</run_depend>

  <export>
  </export>
</package>
